# targeted-adversarial-attack

./: LICENSE  README.md  fetch_data.py  predict_timm.py  pyproject.toml  targeted_adversarial.py
scripts/: predict_timm.py  run_attack.py
targeted_adversarial/: __init__.py  io.py  run_attack.py  targeted_adversarial.py  timm_models.py
targeted_adversarial/assets/: imagenet_sample_1000.json
