[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "targeted_adversarial"
version = "0.1.0"
authors = [
  { name = "Anvar Kurmukov", email = "your.email@example.com" },
]
description = "A Python library to run simple targeted PGD adversarial attack on ImageNet pretrained NN."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "timm",
    "typer",
    "einops",
    "torchvision",
    "Pillow",
    "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/kurmukovai/targeted-adversarial-attack"

[project.scripts]
targeted-adversarial = "targeted_adversarial.run_attack:app"